docs: 전체 프로젝트 글로벌 프롬프트 준수 (완전 통일)
프로젝트 전체 파일에서 글로벌 프롬프트 위반 사항을 수정했습니다.

1. AI 협업 언급 제거
   - scripts/comprehensive-test.sh: Gemini 테스트 전략 언급 제거

2. 기술 용어 영어 표기 통일 (전체 프로젝트)
   - 대상: scripts/, k8s-manifests/, 서비스 디렉토리, Python 소스
   - 변경된 용어:
     * Kubernetes, Cluster, Container, Namespace, Node, Pod
     * Pipeline, Schema, Microservice, Service Mesh
     * Service (서비스) 관련 모든 기술 용어

3. 적용 범위
   - *.sh (스크립트)
   - *.yml, *.yaml (Kubernetes 매니페스트)
   - *.py (Python 소스 코드)
   - *.md (README 파일들)

모든 프로젝트 파일이 글로벌 프롬프트 규칙을 준수합니다.

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -75,12 +75,12 @@ jobs:
           # kustomization.yaml 파일 경로
           KUSTOMIZE_FILE="k8s-manifests/overlays/solid-cloud/kustomization.yaml"
 
-          # 각 서비스의 이미지 태그 업데이트
+          # 각 Service의 이미지 태그 업데이트
           for service in $SERVICES; do
             echo "Updating $service to tag: main-$SHORT_SHA"
 
             # yq 없이 sed를 사용하여 업데이트
-            # images 섹션에서 해당 서비스의 newTag를 업데이트
+            # images 섹션에서 해당 Service의 newTag를 업데이트
             sed -i.bak "/name: $DOCKER_HUB_USERNAME\/$service/,/newTag:/ s/newTag:.*/newTag: main-$SHORT_SHA/" $KUSTOMIZE_FILE
           done
 
