--- a/k8s-manifests/overlays/local/kustomization.yaml
+++ b/k8s-manifests/overlays/local/kustomization.yaml
@@ -3,7 +3,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-# 1. Base 리소스와 네임스페이스 지정
+# 1. Base 리소스와 Namespace 지정
 resources:
 - ../../base
 - namespace.yaml
@@ -12,7 +12,7 @@ resources:
 namePrefix: local-
 namespace: titanium-local
 
-# 3. 로컬에서는 모든 서비스를 1개씩만 실행
+# 3. 로컬에서는 모든 Service를 1개씩만 실행
 replicas:
 - name: api-gateway-deployment
   count: 1
