docs: AI Agent 개발 환경 공개 및 README 링크 추가
- .claude/agents/code-implementation-expert.md 공개 (gitignore 예외 처리)
  커스텀 AI Agent 정의 파일: 역할, 모델(sonnet), 코드 스타일 규칙 명세
  (한국어 코드 주석, no-emoji 등 프로젝트 특성 반영)

- .gemini-mcp/config.json 추가
  Gemini MCP 서버 통합 구성 증거

- README.md 기술 스택 섹션에 회고 문서 링크 추가
  AI Agent 활용 방식 상세 내용 탐색 경로 제공

--- a/.gitignore
+++ b/.gitignore
@@ -164,7 +164,10 @@ vendor/
 kubeconfig
 *.kubeconfig
 *-kubeconfig.yaml
-/.claude/
+/.claude/*
+!/.claude/agents
+/.claude/agents/*
+!/.claude/agents/code-implementation-expert.md
 
 # k6 performance test results
 tests/performance/*.json
